[gd_scene load_steps=4 format=3 uid="uid://gou6m2qym2gd"]

[ext_resource type="Script" uid="uid://kss8hmww5brk" path="res://scenes/game_scenes/daily_path.gd" id="1_inx5p"]
[ext_resource type="PackedScene" uid="uid://dtutaeljvhace" path="res://scenes/game_scenes/mini_pair_entry.tscn" id="2_0ctjq"]
[ext_resource type="StyleBox" uid="uid://68nl5p4gy0ri" path="res://scenes/game_scenes/first_pass_flat_style.tres" id="3_sff4p"]

[node name="DailyPath" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_inx5p")
mini_pair_prefab = ExtResource("2_0ctjq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_sff4p")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="StartPathHBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="FinishPathHBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
